--- a/resource/css/reset.css
+++ b/resource/css/reset.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
 @font-face{
   font-family:'GmarketSansTTFMedium';
-  src:url('/resource/font/GmarketSansTTFMedium.ttf') format('truetype');
+  src:url('../font/GmarketSansTTFMedium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face{
   font-family:'GmarketSansTTFLight';
-  src:url('/resource/font/GmarketSansTTFLight.ttf') format('truetype');
+  src:url('../font/GmarketSansTTFLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face{
   font-family:'GmarketSansTTFBold';
-  src:url('/resource/font/GmarketSansTTFBold.ttf') format('truetype');
+  src:url('../font/GmarketSansTTFBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -72,4 +72,8 @@ video{max-width: 100%}
 }
 .hover-rotate:hover{
   transform: rotate(-15deg);
+}
+section .maxwidth{
+  margin: 0 auto;
+  max-width: 1920px;
 }
