--- a/resource/css/mo_index.css
+++ b/resource/css/mo_index.css
@@ -1,3 +1,14 @@
+@keyframes bounce{
+  0%{
+    bottom: -13px;
+  }
+  50% {
+    bottom: -3px;
+  }
+  100% {
+    bottom: -13px;
+  }
+}
 @media all and (max-width: 768px){
   header.pc{
     display: none;
@@ -326,6 +337,7 @@
     bottom: -10px;
     z-index: 4;
     object-fit: cover;
+    animation: bounce 2s ease-in-out infinite;
   }
   .universe{
     display: none;
@@ -1097,6 +1109,9 @@
     background-color: #ffffff;
     visibility: hidden;
     opacity: 0;
+  }
+  .news .list .item .bottom img{
+    max-width: 50%;
   }
   .news .list .item .top.on + .bottom{
     max-height: 172px;
