--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -276,10 +276,17 @@ header.pc .menu .list a + a{
   -webkit-text-stroke: 2px black;
 }
 .universe .content{
-  font-family: GmarketSansTTFLight, sans-serif;
+  font-family: GmarketSansTTFMedium, sans-serif;
   text-align: right;
   font-size: 40px;
   line-height: 54px;
+  margin-bottom: 25px;
+}
+.universe .subcontent{
+  font-family: GmarketSansTTFLight, sans-serif;
+  text-align: right;
+  font-size: 30px;
+  line-height: 40px;
 }
 .universe .carton{
   max-width: 1920px;
@@ -328,6 +335,7 @@ header.pc .menu .list a + a{
 .universe .carton .tab p.on strong,
 .universe .carton .tab p.on span{
   color: #ffffff;
+  text-align: center;
 }
 .universe .carton .container{
   background-color: #ffffff;
@@ -431,6 +439,10 @@ header.pc .menu .list a + a{
   justify-content: space-between;
   margin-top: 200px;
   position: relative;
+  background-image: url(../img/pc/funding/bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .funding .left-swiper{
   height: 1025px;
@@ -454,15 +466,13 @@ header.pc .menu .list a + a{
   z-index: 1;
 }
 .funding .left-swiper .swiper-slide .info{
-  padding: 20px;
+  padding: 32px 90px 21px 72px;
   background-color: #01FC9F;
   font-family: GmarketSansTTFLight, sans-serif;
   font-size: 30px;
-  line-height: 35px;
-  position: absolute;
-  bottom: 125px;
-  left: 45%;
-  transform: translateX(25%);
+  line-height: 50px;
+  margin-top: 19px;
+  margin-bottom: 43px;
 }
 .funding .swiper__title{
   font-family: GmarketSansTTFBold, sans-serif;
@@ -499,6 +509,7 @@ header.pc .menu .list a + a{
   align-items: center;
   position: relative;
   z-index: 2;
+  margin-top: 100px;
 }
 .funding .swiper__buttons a{
   display: inline-flex;
@@ -522,6 +533,67 @@ header.pc .menu .list a + a{
 }
 .funding .none{
   display: none;
+}
+.funding .image__container{
+  flex: 1;
+  position: relative;
+  padding-left: 200px;
+}
+.funding .circle-image{
+  width: 294px;
+  height: 294px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-text-stroke: 2px black;
+  color: #463F52;
+  font-size: 59px;
+  position: absolute;
+  cursor: pointer;
+  transition: .3s all ease-in-out;
+  background: transparent radial-gradient(closest-side at 50% 50%, #FFFFFF 0%, #01FC9F 100%) 0% 0% no-repeat padding-box;
+  border-radius: 50%;
+}
+.funding .circle-image:nth-child(1){
+  left: 0;
+  bottom: 30%;
+}
+.funding .circle-image:nth-child(2){
+  top: 5%;
+  left: 15%;
+}
+.funding .circle-image:nth-child(3){
+  top: 0;
+  right: 10%;
+}
+.funding .circle-image:nth-child(4){
+  bottom: -8%;
+  right: 10%;
+}
+.funding .circle-image:nth-child(5){
+  bottom: -5%;
+  left: 16%;
+}
+.funding .circle-image:hover{
+  width: 343px;
+  height: 343px;
+}
+.funding .center-image{
+  width: 374px;
+  height: 374px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-text-stroke: 2px black;
+  color: #463F52;
+  font-size: 120px;
+  position: absolute;
+  top: 35%;
+  right: 24%; 
+  cursor: pointer;
+  background: transparent radial-gradient(closest-side at 50% 50%, #FFFFFF 0%, #01FC9F 100%) 0% 0% no-repeat padding-box;
+  border-radius: 50%;
+  padding-top: 30px;
 }
 .roadmap__mo{
   display: none;
