--- a/resource/css/mo_index.css
+++ b/resource/css/mo_index.css
@@ -360,6 +360,13 @@
     -webkit-text-stroke: 1px black;
   }
   .universe__mo .content{
+    font-family: GmarketSansTTFMedium, sans-serif;
+    text-align: right;
+    font-size: 20px;
+    padding-right: 20px;
+    margin-bottom: 25px;
+  }
+  .universe__mo .subcontent{
     font-family: GmarketSansTTFLight, sans-serif;
     text-align: right;
     font-size: 20px;
