--- a/resource/css/mo_index.css
+++ b/resource/css/mo_index.css
@@ -803,7 +803,7 @@
     position: relative;
   }
   .benefit__mo .cards .card{
-    width: 100%;
+    width: calc(100% - 40px);
     border-radius: 20px;
     border: 3px solid #000000;
     position: relative;
