--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -353,9 +353,6 @@ header.pc .menu .list a + a{
 }
 .universe .carton .text{
   width: 100%;
-  height: 340px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   font-family: GmarketSansTTFMedium, sans-serif;
   font-size: 30px;
   position: relative;
@@ -423,6 +420,11 @@ header.pc .menu .list a + a{
   font-family: GmarketSansTTFBold, sans-serif;
   text-align: left;
   font-size: 40px;
+}
+.funding .content span{
+  font-family: GmarketSansTTFLight, sans-serif;
+  text-align: left;
+  font-size: 30px;
 }
 .funding .content + .content{
   margin-top: 40px;
