--- a/resource/css/mo_index.css
+++ b/resource/css/mo_index.css
@@ -417,7 +417,6 @@
     color: #8C7DEA;
   }
   .universe__mo .carton .container{
-    background-color: #ffffff;
     border-top-right-radius: 10px;
     padding: 20px;
     padding-bottom: 60px;
@@ -916,6 +915,9 @@
     font-size: 15px;
     line-height: 25px;
   }
+  .benefit__mo .bottom.mt0{
+    margin-top: 0;
+  }
   .benefit__mo .buttons{
     width: 100%;
     margin-top: 85px;
@@ -923,6 +925,11 @@
     justify-content: center;
     gap: 12px;
     padding: 0 20px;
+  }
+  .benefit__mo .buttons a{
+    color: #ffffff;
+    font-family: GmarketSansTTFMedium, sans-serif;
+    flex: 1;
   }
   .benefit__mo .buttons p{
     flex: 1;
@@ -987,6 +994,9 @@
     gap: 10px;
     border: 1px solid #000000;
     border-radius: 5px;
+  }
+  .teams__mo .container a{
+    width: 100%;
   }
   .teams__mo .container .item.purple{
     background-color: #8C7DEA;
@@ -1122,6 +1132,17 @@
     opacity: 0;
   }
   .bottom p{
+    color: #6a5988 !important;
+    font-size: 15px !important;
+    font-family: GmarketSansTTFLight, sans-serif !important;
+  }
+  .bottom b{
+    color: #6a5988 !important;
+    font-size: 15px !important;
+    font-family: GmarketSansTTFLight, sans-serif !important;
+    font-weight: normal;
+  }
+  .bottom span{
     color: #6a5988 !important;
     font-size: 15px !important;
     font-family: GmarketSansTTFLight, sans-serif !important;
